ajustando nome curso Docker

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker - Aprendendo</li>
         <li>Ansible</li>
         <li>Integração Contínua - Maturidade e Produtividade</li>
     </ul>
