--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker - Aprendendo</li>
-        <li>Ansible</li>
+        <li>Ansible - Infraestrutura como código</li>
         <li>Integração Contínua - Maturidade e Produtividade</li>
         <li>Kubernetes</li>
     </ul>
