--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker - Aprendendo</li>
         <li>Ansible</li>
         <li>Integração Contínua - Maturidade e Produtividade</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes - Introdução</li>
     </ul>
 </body>
 </html>
